fixed overlap of favories button and session title

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,10 @@ body.syncing .ui-header img.sync-status {
   .wherewhen {
     float: right;
   }
+
+  .favoriteSwitch {
+    padding: 0 0 1em 2em;
+  }
 }
 
 .session_detail {
